updated prb rapp comm acceptance

--- a/trunk/isingrand/DMF-Random-V4_Rap_Comm.tex
+++ b/trunk/isingrand/DMF-Random-V4_Rap_Comm.tex
@@ -69,8 +69,7 @@ sketch the content of our analytical approach to the problem. Then we discuss ou
 results in that light. The precise condition of maximal freezing is obtained from this
 analysis. We also go beyond that, using exact numerical results for large system-sizes, averaged
 over several disorder realizations, and discuss further characteristics of the phenomenon. 
-Finally, we conclude with an outlook.
-
+Finally conclude with an outlook.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \noindent
@@ -283,7 +282,8 @@ At very small values of $\omega$, the higher order contributions destroy the dyn
 equivalence between $H(t)$ and $H_{\rm eff}$, leading to a loss of freezing. 
 Freezing begins to appear as $\omega$ is increased, as seen in the inset by the growth of $\tau$ with $\omega$
 for $\eta$ fixed to a freezing value. All the parameters are the same 
-as in Fig~\ref{mz-Rlx-tau}, except with field disorder $h_i$ switched on.} 
+as in Fig~\ref{mz-Rlx-tau}, except with field disorder $h_i$ switched on.
+$h_{i}$ is distributed uniformly and randomly between $\pm 1$}. 
 \label{mz-Rlx-tau-fdon}
 \end{figure*}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -292,8 +292,11 @@ as in Fig~\ref{mz-Rlx-tau}, except with field disorder $h_i$ switched on.}
 {\it Static disordered field ($h_i\neq 0$):}
 Now we briefly present the results for the case with quenched disorder in the transverse field.
 Including randomness in the field does not alter the basic features of the phenomenon discussed above, 
-but there are some quantitative differences that we discuss here. The equivalence between $H(t)$ and $H_{\rm eff}$
-is less exact than in the previous case with $h_i=0$. This is due to the field-dependent terms in Eq.~\ref{eq:heff} that scale inversely with $\omega$. Thus, we expect freezing at the roots of $\mathcal{J}_0(\eta)$ to last for shorter times at large $\omega$ when the field disorder is on. This is qualitatively verified by our numerical simulations of the 
+but there are some quantitative differences that we discuss here. In this case $H_{\rm eff}$
+does not vanish even to first order in $1/\omega$ at the freezing point due to the field-dependent 
+terms in Eq.~\ref{eq:heff} that scale inversely with $\omega$. Thus, we expect freezing at the roots of 
+$\mathcal{J}_0(\eta)$ to last for shorter times at large $\omega$ when the field 
+disorder is on. This is qualitatively verified by our numerical simulations of the 
 exact dynamics with field disorder on. Figure~\ref{mz-Rlx-tau-fdon} shows plots of $m^z$ and the 
 exponential relaxation time scale therein in regimes similar to Fig.~\ref{mz-Rlx-tau}, except with 
 the field disorder switched on. The plots show that freezing is maintained at the roots of 
@@ -324,8 +327,7 @@ in a present day cold-atom laboratory.       \\
 \noindent
 {\it Acknowledgements:}
 AR thanks CSIR, India for support under Scientists' Pool Scheme No. $13(8531-$A$)/2011/$Pool, as well as the TACC, University 
-of Texas at Austin, for access to their clusters. Both authors thank Kasturi Basu, IACS Kolkata, for useful 
-discussions.
+of Texas at Austin, for access to their clusters. Both authors thank Kasturi Basu, IACS Kolkata, for useful discussions.
 
 \bibliographystyle{apsrev4-1}
 \bibliography{bib_freezing} 
