slight typo in new arxiv submission

--- a/trunk/isingrand/DMF-Random_suppl.tex
+++ b/trunk/isingrand/DMF-Random_suppl.tex
@@ -61,7 +61,7 @@ where the subscript $H$ denotes operators in the Heisenberg picture, and  $U(t)$
 \label{eq:dyn}
 i \frac{\mathrm{d}}{\mathrm{d} t}c^{\;}_{i,H}(t) =  2\sum_j \bigg[A_{ij}(t)c^{\;}_{j,H}(t)+ B_{ij}(t)c^{\dagger}_{i,H}(t)\bigg].
 \end{equation}
-These equations can be solved by the trial solution $c^{\;}_{i,H}(t) = \sum_\mu \left[u_{i\mu}(t)\gamma_{\mu,H}(t)+v^\ast_{i\mu}\gamma^\dagger_{\mu,H}(t)\right]$, where the Bogoliubov ansatz makes the many body state $|\Psi(t)\rangle$ the emergent vacuum of the modes  created by $\gamma^\dagger_{\mu}(t)$ $\forall t$ \textit{viz.} $|\Psi(t)\rangle \sim \prod_\mu \gamma_\mu(t) |0\rangle$, where the normalization has been suppressed, and the product is over all lattice sites. A necessary and sufficient condition for the emergent modes to generate the emergent vacuum is that $\gamma_\nu(t)|\Psi(t)\rangle = 0$, leading to  $ {d\over dt} \left( \gamma_\nu(t)|\Psi(t)\rangle \right) = 0$. In the Heisenberg picture, this condition can be rewritten as $i{d\over dt}\gamma_{\mu,H}(t)=0$. Using this result, we substitute the trial solution into Eq.~\ref{eq:dyn} and compare operator coefficients. This leads to the following dynamical system:
+These equations can be solved by the trial solution $c^{\;}_{i,H}(t) = \sum_\mu \left[u_{i\mu}(t)\gamma_{\mu,H}(t)+v^\ast_{i\mu}(t)\gamma^\dagger_{\mu,H}(t)\right]$, where the Bogoliubov ansatz makes the many body state $|\Psi(t)\rangle$ the emergent vacuum of the modes  created by $\gamma^\dagger_{\mu}(t)$ $\forall t$ \textit{viz.} $|\Psi(t)\rangle \sim \prod_\mu \gamma_\mu(t) |0\rangle$, where the normalization has been suppressed, and the product is over all lattice sites. A necessary and sufficient condition for the emergent modes to generate the emergent vacuum is that $\gamma_\nu(t)|\Psi(t)\rangle = 0$, leading to  $ {d\over dt} \left( \gamma_\nu(t)|\Psi(t)\rangle \right) = 0$. In the Heisenberg picture, this condition can be rewritten as $i{d\over dt}\gamma_{\mu,H}(t)=0$. Using this result, we substitute the trial solution into Eq.~\ref{eq:dyn} and compare operator coefficients. This leads to the following dynamical system:
 \begin{eqnarray} 
 \label{BdG_tdep:eqn}
 i\frac{d}{dt}u_{i\mu}(t) &=&  {2} \sum_{j=1}^{L} \bigg[A_{i,j}(t)u_{j\mu}(t)+ B_{i,j}(t)v_{j\mu}(t) \bigg] \nonumber \\
