--- a/trunk/isingrand/bib_freezing.bib
+++ b/trunk/isingrand/bib_freezing.bib
@@ -4,7 +4,7 @@
 % Encoding: Cp1252
 
 @misc{suppl,
-	note = "See the supplementary material."
+	note = "See the supplementary material for details on the numerical methodology used to simulate the Schroedinger dynamics of the exact Hamiltonian in Eq (2), as well as the analytical RG formalism used to derive the expression for $H_{\rm eff}$ in Eq. (4). Additional plots for the disorder fluctuations and analytical-numerical comparisons are also provided. "
 }
 
 @incollection{Arimondo-Rev,
