--- a/branches/dTWA+BBGKY/dTWA+BBGKY.tex
+++ b/branches/dTWA+BBGKY/dTWA+BBGKY.tex
@@ -1,4 +1,5 @@
 \documentclass[aps,prl,showpacs,amsmath,amssymb,superscriptaddress,reprint,10pt]{revtex4-1}
+\usepackage{draftwatermark}
 \usepackage{bm}
 \usepackage{graphicx}
 \usepackage{xcolor}
